--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
 //    compile 'com.squareup.okhttp:logging-interceptor:2.7.0'
     //https://github.com/JakeWharton/butterknife
     compile 'com.jakewharton:butterknife:6.1.0'
+    //https://github.com/bumptech/glide
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 }
