--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" />
-
         <activity
             android:name=".SplashActivity"
             android:label="@string/app_name"
@@ -25,6 +24,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".GithubAPIActivity"
+            android:label="@string/title_activity_github_api">
         </activity>
     </application>
 
