--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
-   // https://github.com/square/retrofit
+    // https://github.com/square/retrofit
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta3'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
@@ -35,4 +35,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.1.0'
     //https://github.com/bumptech/glide
     compile 'com.github.bumptech.glide:glide:3.6.1'
+    //https://github.com/gitskarios/GithubAndroidSdk
+    //不会用啊
+//    compile 'com.github.alorma:github-sdk:3.1.2'
 }
