--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+      - name: Send mail
+        uses: dawidd6/action-send-mail@master
+        with:
+           server_address: smtp.qq.com
+           server_port: 465
+           username: ${{secrets.MAIL_USERNAME}}
+           password: ${{secrets.MAIL_PASSWORD}}
+           subject: Github Actions job result
+           # Literal body:
+           body: Build job of ${{github.repository}} completed successfully!
+           # Read file contents as body:
+           body: file://README.md
+           to: 645148061@qq.com
+           from: GitHub Actions
+           # Optional content type:
+           content_type: text/html
